--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "nodejs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/node": "^22.13.11",
-    "discord.js": "^14.21.0"
-  }
+    "name": "24statusaccount",
+    "version": "0.1.0",
+    "description": "24statusaccount",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js"
+    },
+    "dependencies": {
+        "@types/node": "^18.0.6",
+        "discord.js-selfbot-v13": "^2.10.1",
+        "dotenv": "^16.4.5",
+        "express": "^4.18.2",
+        "node-fetch": "^3.2.6"
+    },
+    "engines": {
+        "node": "16.x"
+    }
 }
